--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
     </header>
     <main>
+     <div class="one">
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-6 col-lg-6">
@@ -95,9 +96,66 @@
             </div>
             </div>
         </div>
-
-
       </div>
+      </div>
+      <div class="two">
+        <div class="container">
+      <div class="row">
+            <h5>INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h5>
+            <div class="col-xs-12 col-md-4 col-lg-2">
+              <img src="https://prismic-io.s3.amazonaws.com/www-static/591cf605-46aa-4a7b-8af5-90036c252c97_docker-bab60eeb.svg" alt="">
+           </div>
+           <div class="col-xs-12 col-md-4 col-lg-2">
+             <img src="https://prismic-io.s3.amazonaws.com/www-static/da244a8e-2546-47b1-aae2-b9824c657708_gitlab-166e2067.svg" alt="">
+          </div>
+          <div class="col-xs-12 col-md-4 col-lg-2">
+            <img src="https://prismic-io.s3.amazonaws.com/www-static/b3f152c0-5465-45ba-80ab-2cdd258e6bee_slack-e20293da.svg" alt="">
+         </div>
+         <div class="col-xs-12 col-md-4 col-lg-2">
+           <img src="https://prismic-io.s3.amazonaws.com/www-static/9351f07e-afbc-439a-a75f-3eca82be9c0e_hashicorp-4431df79.svg" alt="">
+        </div>
+        <div class="col-xs-12 col-md-4 col-lg-2">
+          <img src="https://prismic-io.s3.amazonaws.com/www-static/01ff74d1-79dd-4f18-888f-4a93a976e61d_wework-be6eab32.svg" alt="">
+       </div>
+       <div class="col-xs-12 col-md-4 col-lg-2">
+         <img src="https://prismic-io.s3.amazonaws.com/www-static/1583c145-22f8-402c-96f8-3af919a0df25_splunklogo.svg" alt="">
+      </div>
+           <a class="business" href="#">See business solution <i class="fas fa-angle-right"></i></a>
+         </div>
+        </div>
+      </div>
+      <div class="three">
+        <div class="container">
+        <h2 class="thtitle" >Deploy and scale seamlessly</h2>
+        <p class="thp">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
+         <div class="col-xs-12 col-md-6 col-lg-6">
+           <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/16ae92b4-6939-446c-b6a3-0ffec01cdc14_kublogoicon.svg" alt="">
+           <h5 class="thcol">Kubernetes in minutes</h5>
+           <p>Spin up a managed Kubernetes cluster in just a few clicks. Simply specify the size and location of your worker nodes.</p>
+         </div>
+         <div class="col-xs-12 col-md-6 col-lg-6">
+           <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/9d343e9c-fe74-4979-8ad9-e8efc58d6ee7_dropletinboxicon.svg" alt="">
+           <h5 class="thcol">Flexible compute types</h5>
+          <p class="thp">With Basic, General Purpose, CPU-Optimized or Memory-Optimized Droplets, you can choose the right infrastructure for your workload.</p>
+         </div>
+         <div class="col-xs-12 col-md-6 col-lg-6">
+           <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/936bb585-99ba-460d-ae2f-7bbdae8896cc_stacksplusicon.svg" alt="">
+           <h5 class="thcol">1-Click App Marketplace</h5>
+           <p class="thp">Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.</p>
+         </div>
+         <div class="col-xs-12 col-md-6 col-lg-6">
+           <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/0eee6655-dfce-46b2-ab48-f40ff27d8a73_globeicon.svg" alt="">
+           <h5 class="thcol">Global availability</h5>
+           <p class="thp">Deploy to any of our data center locations – New York, SF, London, Amsterdam, Bangalore, and more.</p>
+         </div>
+         <div class="col-xs-12 col-md-6 col-lg-6">
+           <img class="block-img"src="" alt="">
+           <h5 class="thcol"></h5>
+           <p class="thp"></p>
+         </div>
+      </div>
+      </div>
+
     </main>
 
   </body>
