--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 
     </header>
     <main>
+     <div class="one">
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-6 col-lg-6">
@@ -95,9 +96,108 @@
             </div>
             </div>
         </div>
-
-
       </div>
+      </div>
+      <div class="two">
+        <div class="container">
+      <div class="row">
+            <h5>INNOVATIVE BUSINESSES TRUST DIGITALOCEAN</h5>
+            <div class="col-xs-12 col-md-4 col-lg-2">
+              <img src="https://prismic-io.s3.amazonaws.com/www-static/591cf605-46aa-4a7b-8af5-90036c252c97_docker-bab60eeb.svg" alt="">
+           </div>
+           <div class="col-xs-12 col-md-4 col-lg-2">
+             <img src="https://prismic-io.s3.amazonaws.com/www-static/da244a8e-2546-47b1-aae2-b9824c657708_gitlab-166e2067.svg" alt="">
+          </div>
+          <div class="col-xs-12 col-md-4 col-lg-2">
+            <img src="https://prismic-io.s3.amazonaws.com/www-static/b3f152c0-5465-45ba-80ab-2cdd258e6bee_slack-e20293da.svg" alt="">
+         </div>
+         <div class="col-xs-12 col-md-4 col-lg-2">
+           <img src="https://prismic-io.s3.amazonaws.com/www-static/9351f07e-afbc-439a-a75f-3eca82be9c0e_hashicorp-4431df79.svg" alt="">
+        </div>
+        <div class="col-xs-12 col-md-4 col-lg-2">
+          <img src="https://prismic-io.s3.amazonaws.com/www-static/01ff74d1-79dd-4f18-888f-4a93a976e61d_wework-be6eab32.svg" alt="">
+       </div>
+       <div class="col-xs-12 col-md-4 col-lg-2">
+         <img src="https://prismic-io.s3.amazonaws.com/www-static/1583c145-22f8-402c-96f8-3af919a0df25_splunklogo.svg" alt="">
+      </div>
+           <a class="business" href="#">See business solution <i class="fas fa-angle-right"></i></a>
+         </div>
+        </div>
+      </div>
+      <div class="three">
+        <div class="container">
+        <h2 class="thtitle" >Deploy and scale seamlessly</h2>
+        <p class="thp">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
+         <div class="col-xs-12 col-md-6 col-lg-6">
+           <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/16ae92b4-6939-446c-b6a3-0ffec01cdc14_kublogoicon.svg" alt="">
+           <h5 class="thcol">Kubernetes in minutes</h5>
+           <p>Spin up a managed Kubernetes cluster in just a few clicks. Simply specify the size and location of your worker nodes.</p>
+         </div>
+         <div class="col-xs-12 col-md-6 col-lg-6">
+           <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/9d343e9c-fe74-4979-8ad9-e8efc58d6ee7_dropletinboxicon.svg" alt="">
+           <h5 class="thcol">Flexible compute types</h5>
+          <p class="thp">With Basic, General Purpose, CPU-Optimized or Memory-Optimized Droplets, you can choose the right infrastructure for your workload.</p>
+         </div>
+         <div class="col-xs-12 col-md-6 col-lg-6">
+           <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/936bb585-99ba-460d-ae2f-7bbdae8896cc_stacksplusicon.svg" alt="">
+           <h5 class="thcol">1-Click App Marketplace</h5>
+           <p class="thp">Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.</p>
+         </div>
+         <div class="col-xs-12 col-md-6 col-lg-6">
+           <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/0eee6655-dfce-46b2-ab48-f40ff27d8a73_globeicon.svg" alt="">
+           <h5 class="thcol">Global availability</h5>
+           <p class="thp">Deploy to any of our data center locations – New York, SF, London, Amsterdam, Bangalore, and more.</p>
+         </div>
+         <div class="col-xs-12 col-md-6 col-lg-6">
+           <img class="block-img"src="" alt="">
+           <h5 class="thcol"></h5>
+           <p class="thp"></p>
+         </div>
+      </div>
+      </div>
+      <div class="four">
+        <div class="container">
+          <h2 class="thtitle">Designed for developers</h2>
+          <p class="pfour">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
+          <div class="col-xs-12 col-md-12 col-lg-12">
+             <img class="screen"src="https://images.prismic.io/www-static/ba01040c-a47a-43c9-995d-4ed05a5dc4c9_screenshot-create-kubernetes-cluster-4a930955.jpg?auto=compress,format" alt="">
+             <p class="thp">Use Kubernetes to improve availability, scalability, and resource efficiency of your containerized applications.</p>
+             <i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i>
+         </div>
+        </div>
+      </div>
+       <div class="five">
+         <div class="container">
+           <h2 class="thtitle">Built for business</h2>
+           <div class="col-xs-12 col-md-3 col-lg-3">
+             <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/7531f96f-5414-42c2-ba65-0d705769c62f_icon-check-shield.svg" alt="">
+              <h5 class="thcol">Reliable platform</h5>
+             <p class="frp">More than 100,000 developer teams worldwide trust DigitalOcean to support their business with a 99.99% uptime SLA for all services.</p>
+             <a href="#">Security <i class="fas fa-angle-right"></i> </a>
+           </div>
+           <div class="col-xs-12 col-md-3 col-lg-3">
+             <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/4083b409-5e65-4403-86a8-7ed8f501a0d8_icon-task-list-multiple.svg" alt="">
+             <h5 class="thcol">Predictable pricing</h5>
+            <p class="frp">Leave complex pricing structures behind. Always know what you’ll pay per month with a flat, industry-leading pricing structure.</p>
+            <a href="#"> Pricing <i class="fas fa-angle-right"></i> </a>
+           </div>
+           <div class="col-xs-12 col-md-3 col-lg-3">
+             <img class="block-img" src="https://prismic-io.s3.amazonaws.com/www-static/fccb0e1b-4de3-4b58-9f3e-5455f5c3aeae_icon-headphones-customer-support-human.svg" alt="">
+             <h5 class="thcol">World-class service</h5>
+            <p class="frp">Free around-the-clock technical support for all customers, with additional benefits for premium support subscribers. You’ll feel the love.</p>
+            <a href="#"> Support <i class="fas fa-angle-right"></i> </a>
+           </div>
+           <div class="col-xs-12 col-md-3 col-lg-3">
+             <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/1c791b14-833f-4190-a865-a55e11055fc0_icon-certified-certificate.svg" alt="">
+             <h5 class="thcol">Security and compliance</h5>
+            <p class="frp">Keep your data protected. Our platform is certified on multiple international standards, including SOC 1 Type II, SOC 2 Type II, ISO/IEC 27001, and PCI-DSS.</p>
+            <a href="#"> Compliance <i class="fas fa-angle-right"></i> </a>
+           </div>
+
+
+         </div>
+
+       </div>
     </main>
 
   </body>
