--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               <input type="text" name="" value="" placeholder="Password">
               <button class="upemail"type="button" name="button"><strong>Sign Up with Email</strong></button>
                  <hr>
-                <button class="googleup" type="button" name="button"><i class="fab fa-google"></i> Sign un with Google</button>t
+                <button class="googleup" type="button" name="button"><i class="fab fa-google"></i> Sign un with Google</button>
                       <button class="git" type="button" name="button"><i class="fab fa-github"></i></button>
             </div>
             </div>
@@ -127,28 +127,32 @@
       <div class="three">
         <div class="container">
         <h2 class="thtitle" >Deploy and scale seamlessly</h2>
+
         <p class="thp">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
-         <div class="col-xs-12 col-md-6 col-lg-6">
+
+
+
+         <div class="col-xs-12 col-md-5 col-lg-5">
            <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/16ae92b4-6939-446c-b6a3-0ffec01cdc14_kublogoicon.svg" alt="">
            <h5 class="thcol">Kubernetes in minutes</h5>
            <p>Spin up a managed Kubernetes cluster in just a few clicks. Simply specify the size and location of your worker nodes.</p>
          </div>
-         <div class="col-xs-12 col-md-6 col-lg-6">
+         <div class="col-xs-12 col-md-5 col-lg-5">
            <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/9d343e9c-fe74-4979-8ad9-e8efc58d6ee7_dropletinboxicon.svg" alt="">
            <h5 class="thcol">Flexible compute types</h5>
           <p class="thp">With Basic, General Purpose, CPU-Optimized or Memory-Optimized Droplets, you can choose the right infrastructure for your workload.</p>
          </div>
-         <div class="col-xs-12 col-md-6 col-lg-6">
+         <div class="col-xs-12 col-md-5 col-lg-5">
            <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/936bb585-99ba-460d-ae2f-7bbdae8896cc_stacksplusicon.svg" alt="">
            <h5 class="thcol">1-Click App Marketplace</h5>
            <p class="thp">Quickly deploy projects using one of our preconfigured 1-Click Apps, like LAMP, Docker, and WordPress.</p>
          </div>
-         <div class="col-xs-12 col-md-6 col-lg-6">
+         <div class="col-xs-12 col-md-5 col-lg-5">
            <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/0eee6655-dfce-46b2-ab48-f40ff27d8a73_globeicon.svg" alt="">
            <h5 class="thcol">Global availability</h5>
            <p class="thp">Deploy to any of our data center locations – New York, SF, London, Amsterdam, Bangalore, and more.</p>
          </div>
-         <div class="col-xs-12 col-md-6 col-lg-6">
+         <div class="col-xs-12 col-md-5 col-lg-5">
            <img class="block-img"src="" alt="">
            <h5 class="thcol"></h5>
            <p class="thp"></p>
@@ -199,21 +203,184 @@
           <div class="container">
           <h2 class="sxtitle">Service your customers around the world from 13 data centers.</h2>
           <p class="sxp">Run your infrastructure near your customers. Industry-low <a class="band"href="#">bandwidth pricing</a>, with generous quotas and add-on transfer at just $.01/GiB, makes DigitalOcean perfect for network-heavy apps like VPN and video.</p>
-              <div class="col-xs-12 col-md-12 col-lg-6">
-                <ul>
+               <div class="countries col-xs-4 col-md-4 col-lg-1">
+                   <strong class="code text-uppercase">ams2</strong>
+              </div>
+              <div class="countries col-xs-4 col-md-4 col-lg-3">
+                <p class="location">Amsterdam, Netherlands</p>
+              </div>
+               <div class="countries col-xs-4 col-md-4 col-lg-2">
+                <a class="test"href="#">test speed <i class="fas fa-angle-right"></i> </a>
 
+               </div>
 
-                  <li>  <span class="code ">ams2</span> <p class="location">Amsterdam, Netherlands</p> <a class="test"href="#"> Test Speed  <i class="fas fa-angle-right"></i> </a> </li>
-                </ul>
+             <div class="countries col-xs-4 col-md-4 col-lg-1">
+               <strong class="code text-uppercase">ams3</strong>
+            </div>
+            <div class="countries col-xs-4 col-md-4 col-lg-3">
+             <p class="location">Amsterdam, Netherlands</p>
+            </div>
+            <div class="countries col-xs-4 col-md-4 col-lg-2">
+             <a class="test"href="#">test speed <i class="fas fa-angle-right"></i> </a>
+
+           </div>
+
+           <div class="countries col-xs-4 col-md-4 col-lg-1">
+               <strong class="code text-uppercase">blr1</strong>
+           </div>
+          <div class="countries col-xs-4 col-md-4 col-lg-3">
+               <p class="location">Bangalore, India</p>
+          </div>
+           <div class="countries col-xs-4 col-md-4 col-lg-2">
+            <a class="test"href="#">test speed <i class="fas fa-angle-right"></i> </a>
+
+           </div>
+            <div class="countries col-xs-4 col-md-4 col-lg-1">
+                 <strong class="code text-uppercase">fra1</strong>
+            </div>
+             <div class="countries col-xs-4 col-md-4 col-lg-3">
+                    <p class="location">Frankfurt, Germany</p>
+              </div>
+               <div class="countries col-xs-4 col-md-4 col-lg-2">
+                 <a class="test"href="#">test speed <i class="fas fa-angle-right"></i> </a>
+
+                    </div>
+              <div class="countries col-xs-4 col-md-4 col-lg-1">
+                  <strong class="code text-uppercase">lon1</strong>
              </div>
+              <div class="countries col-xs-4 col-md-4 col-lg-3">
+                    <p class="location">London, UK</p>
+              </div>
+              <div class="countries col-xs-4 col-md-4 col-lg-2">
+                 <a class="test"href="#">test speed <i class="fas fa-angle-right"></i> </a>
+
+                </div>
+                  <div class="countries col-xs-4 col-md-4 col-lg-1">
+                         <strong class="code text-uppercase">nyc1</strong>
+                   </div>
+                   <div class="countries col-xs-4 col-md-4 col-lg-3">
+                          <p class="location">new York, NY</p>
+                    </div>
+                    <div class="countries col-xs-4 col-md-4 col-lg-2">
+                     <a class="test"href="#">test speed <i class="fas fa-angle-right"></i> </a>
+
+                       </div>
+                        <div class="countries col-xs-4 col-md-4 col-lg-1">
+                          <strong class="code text-uppercase">nyc2</strong>
+                        </div>
+                       <div class="countries col-xs-4 col-md-4 col-lg-3">
+                          <p class="location">new York, NY</p>
+                      </div>
+                       <div class="countries col-xs-4 col-md-4 col-lg-2">
+                          <a class="test"href="#">test speed <i class="fas fa-angle-right"></i> </a>
+
+                         </div>
+                         <div class="countries col-xs-4 col-md-4 col-lg-1">
+                            <strong class="code text-uppercase">nyc3</strong>
+                          </div>
+                           <div class="countries col-xs-4 col-md-4 col-lg-3">
+                             <p class="location">New York, NY</p>
+                           </div>
+                          <div class="countries col-xs-4 col-md-4 col-lg-2">
+                            <a class="test"href="#">test speed <i class="fas fa-angle-right"></i> </a>
+
+                            </div>
+                          <div class="countries col-xs-4 col-md-4 col-lg-1">
+                            <strong class="code text-uppercase">sfo1</strong>
+                            </div>
+                          <div class="countries col-xs-4 col-md-4 col-lg-3">
+                           <p class="location">San Francisco, CA</p>
+                         </div>
+                       <div class="countries col-xs-4 col-md-4 col-lg-2">
+                            <a class="test"href="#">test speed <i class="fas fa-angle-right"></i> </a>
+
+                          </div>
+                    <div class="countries col-xs-4 col-md-4 col-lg-1">
+                           <strong class="code text-uppercase">sfo2</strong>
+                     </div>
+                    <div class="countries col-xs-4 col-md-4 col-lg-3">
+                             <p class="location">San Francisco, CA</p>
+                      </div>
+                    <div class="countries col-xs-4 col-md-4 col-lg-2">
+                           <a class="test"href="#">test speed <i class="fas fa-angle-right"></i> </a>
+
+                     </div>
+                     <div class="countries col-xs-4 col-md-4 col-lg-1">
+                         <strong class="code text-uppercase">sfo3</strong>
+                     </div>
+                     <div class="countries col-xs-4 col-md-4 col-lg-3">
+                           <p class="location">San Francisco, CA</p>
+                     </div>
+                      <div class="countries col-xs-4 col-md-4 col-lg-2">
+                             <a class="test"href="#">test speed <i class="fas fa-angle-right"></i> </a>
+
+                       </div>
+                       <div class="countries col-xs-4 col-md-4 col-lg-1">
+                             <strong class="code text-uppercase">sgp1</strong>
+                       </div>
+                       <div class="countries col-xs-4 col-md-4 col-lg-3">
+                             <p class="location">Singapore</p>
+                       </div>
+                        <div class="countries col-xs-4 col-md-4 col-lg-2">
+                              <a class="test"href="#">test speed <i class="fas fa-angle-right"></i> </a>
+
+                         </div>
+                         <div class="countries col-xs-4 col-md-4 col-lg-1">
+                               <strong class="code text-uppercase">tor1</strong>
+                         </div>
+                          <div class="countries col-xs-4 col-md-4 col-lg-3">
+                                <p class="location">Toronto, Canada</p>
+                          </div>
+                           <div class="countries col-xs-4 col-md-4 col-lg-2">
+                                <a class="test"href="#">test speed <i class="fas fa-angle-right"></i> </a>
+
+                           </div>
+
+
 
 
 
 
 
           </div>
-          <strong class="code text-uppercase"></strong> <p class="location"></p> <a class="test"href="#"></a>
 
+        </div>
+        <div class="seven">
+          <div class="container">
+            <h2 class="thtitle">Development teams love DigitalOcean</h2>
+            <p class="psvn">Easily organize your infrastructure with Projects. And with <a href="#">Teams</a> , everyone can get their own account, with just the privileges they need to do their jobs. </p>
+            <div class="col-lg-2">
+
+            </div>
+            <div class="col-xs-12 col-md-12 col-lg-8">
+               <div class="box3">
+                 <img src="https://images.prismic.io/www-static/16673e66-0c2f-417b-88bb-f02cc12b8fda_rockerbox-logo-51462da2.png?auto=compress,format" alt="">
+                 <p class="pbox"> <i class="fas fa-quote-left"></i> We have been able to make scaling the technical infrastructure of our businesscost effective and efficient<i class="fas fa-quote-right"></i></p>
+                 <p class="sign">Rick O'Toole</p>
+                 <small class="cto"> Co-founder and CTO</small>
+
+               </div>
+               <i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i>
+
+            </div>
+            <div class="col-xs- col-lg-2">
+
+            </div>
+
+          </div>
+
+        </div>
+        <div class="eight">
+          <div class="container">
+            <div class="col-xs-12 col-md-6 col-lg-6">
+              <h2 class="gets">Get Started now</h2>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-6">
+              <button class="create" type="button" name="button"> <strong>Create your account</strong> </button>
+
+           </div>
+
+          </div>
         </div>
     </main>
 
