--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
         </div>
       </div>
       <div class="three">
-        <div class="container">
+       <div class="container">
+       <div class="row">
         <h2 class="thtitle" >Deploy and scale seamlessly</h2>
 
         <p class="thp">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
@@ -158,8 +159,11 @@
            <p class="thp"></p>
          </div>
       </div>
-      </div>  <div class="four">
+    </div>
+      </div>
+       <div class="four">
         <div class="container">
+          <div class="row">
           <h2 class="thtitle">Designed for developers</h2>
           <p class="pfour">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
           <div class="col-xs-12 col-md-12 col-lg-12">
@@ -168,10 +172,12 @@
              <i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i>
 
          </div>
+       </div>
         </div>
       </div>
        <div class="five">
          <div class="container">
+           <div class="row">
            <h2 class="thtitle">Built for business</h2>
            <div class="col-xs-12 col-md-3 col-lg-3">
              <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/7531f96f-5414-42c2-ba65-0d705769c62f_icon-check-shield.svg" alt="">
@@ -198,9 +204,11 @@
             <a href="#"> Compliance <i class="fas fa-angle-right"></i> </a>
            </div>
          </div>
+         </div>
        </div>
         <div class="six">
           <div class="container">
+            <div class="row">
           <h2 class="sxtitle">Service your customers around the world from 13 data centers.</h2>
           <p class="sxp">Run your infrastructure near your customers. Industry-low <a class="band"href="#">bandwidth pricing</a>, with generous quotas and add-on transfer at just $.01/GiB, makes DigitalOcean perfect for network-heavy apps like VPN and video.</p>
                <div class="countries col-xs-4 col-md-4 col-lg-1">
@@ -343,7 +351,7 @@
 
 
           </div>
-
+        </div>
         </div>
         <div class="seven">
           <div class="container">
@@ -388,6 +396,117 @@
           </div>
         </div>
     </main>
+    <footer>
+      <div class="footer-top">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-1 col-lg-1">
+
+            </div>
+            <div class="col-xs-6 col-md-2 col-lg-2">
+              <h6 class="ftitle">Company</h6>
+               <ul class="flist">
+                 <li><a href="#">About</a> </li>
+                 <li><a href="#">Leadership</a> </li>
+                 <li><a href="#">Blog</a> </li>
+                 <li><a href="#">Careers</a> </li>
+                 <li><a href="#">Partners</a> </li>
+                 <li><a href="#">Referral Program</a> </li>
+                 <li><a href="#">Press</a> </li>
+                 <li><a href="#">Legal</a> </li>
+                 <li><a href="#">Trust Platform</a> </li>
+
+               </ul>
+            </div>
+            <div class="col-xs-6 col-md-2 col-lg-2">
+              <h6 class="ftitle">Products</h6>
+               <ul class="flist">
+                 <li><a href="#">Products Overview</a> </li>
+                 <li><a href="#">Droplets</a> </li>
+                 <li><a href="#">Kubernetes</a> </li>
+                 <li><a href="#">Mananged Databases</a> </li>
+                 <li><a href="#">Spaces</a> </li>
+                 <li><a href="#">Marketplace</a> </li>
+                 <li><a href="#">Load Balances</a> </li>
+                 <li><a href="#">Block Storages</a> </li>
+                 <li><a href="#">Tools & Integrations</a> </li>
+                 <li><a href="#">API</a> </li>
+                 <li><a href="#">Pricing</a> </li>
+                 <li><a href="#">Documentation</a> </li>
+                 <li><a href="#">Release Notes</a> </li>
+
+               </ul>
+            </div>
+            <div class="col-xs-6 col-md-2 col-lg-2">
+              <h6 class="ftitle">Community</h6>
+               <ul class="flist">
+                 <li><a href="#">Tutorials</a> </li>
+                 <li><a href="#">meetups</a> </li>
+                 <li><a href="#">Q&A</a> </li>
+                 <li><a href="#">Write for DOnations</a> </li>
+                 <li><a href="#">Droplets for Demos</a> </li>
+                 <li><a href="#">Hatch Startup Program</a> </li>
+                 <li><a href="#">Shop Swag</a> </li>
+                 <li><a href="#">Research Program</a> </li>
+                 <li><a href="#">Currents Research</a> </li>
+                 <li><a href="#">Open Source</a> </li>
+
+               </ul>
+            </div>
+            <div class="col-xs-6 col-md-2 col-lg-2">
+              <h6 class="ftitle">Solutions</h6>
+               <ul class="flist">
+                 <li><a href="#">Web & Mobile Apps</a> </li>
+                 <li><a href="#">Website Hosting</a> </li>
+                 <li><a href="#">Game Devolpment</a> </li>
+                 <li><a href="#">Streaming</a> </li>
+                 <li><a href="#">VPN</a> </li>
+                 <li><a href="#">Startups</a> </li>
+                 <li><a href="#">SaaS Solutions</a> </li>
+                 <li><a href="#">Agency & Web Dev Shops</a> </li>
+                 <li><a href="#">Managed Cloud Hotinng Providers</a> </li>
+                 <li><a href="#">Big Data</a> </li>
+                 <li><a href="#">Business Solutions</a> </li>
+
+               </ul>
+            </div>
+            <div class="col-xs-6 col-md-2 col-lg-2">
+              <h6 class="ftitle">Contact</h6>
+               <ul class="flist">
+                 <li><a href="#">Support</a> </li>
+                 <li><a href="#">Sales</a> </li>
+                 <li><a href="#">Report Abuse</a> </li>
+                 <li><a href="#">System Status</a> </li>
+
+               </ul>
+            </div>
+            <div class="col-md-1 col-lg-1">
+
+            </div>
+
+
+          </div>
+          <hr class="hrfooter">
+        </div>
+      </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-12 col-md-6 col-lg-6">
+            <img  src="https://prismic-io.s3.amazonaws.com/www-static%2F903fd83b-8963-42c2-baf6-44f4d6bb83f2_digitalocean-logo-mark.svg" alt="">
+            <small>© 2020 DigitalOcean, LLC. All rights reserved.</small>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-6">
+            <ul class="flist">
+              <li class="social">   <a href="#"><i class="fab fa-facebook-square"></i></a> <a href="#"><i class="fab fa-twitter"></i> </a> <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#">  <i class="fab fa-youtube"></i> </a> <a href="#"> <i class="fab fa-linkedin"></i> </a> <a href="#"> <i class="fab fa-dev"></i> </a></li>
+            </ul>
+          </div>
+
+        </div>
+      </div>
+    </div>
+    </footer>
 
 
   </body>
