--- a/index.html
+++ b/index.html
@@ -167,7 +167,9 @@
           <h2 class="thtitle">Designed for developers</h2>
           <p class="pfour">Build more and spend less time managing your infrastructure with our easy-to-use control panel and API.</p>
           <div class="col-xs-12 col-md-12 col-lg-12">
-             <img class="screen"src="https://images.prismic.io/www-static/ba01040c-a47a-43c9-995d-4ed05a5dc4c9_screenshot-create-kubernetes-cluster-4a930955.jpg?auto=compress,format" alt="">
+            <div class="screen">
+              <img class="screen"src="https://images.prismic.io/www-static/ba01040c-a47a-43c9-995d-4ed05a5dc4c9_screenshot-create-kubernetes-cluster-4a930955.jpg?auto=compress,format" alt="">
+            </div>
              <p class="thp">Use Kubernetes to improve availability, scalability, and resource efficiency of your containerized applications.</p>
              <i class="fas fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i> <i class="far fa-circle"></i>
 
@@ -493,8 +495,10 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-md-6 col-lg-6">
-            <img  src="https://prismic-io.s3.amazonaws.com/www-static%2F903fd83b-8963-42c2-baf6-44f4d6bb83f2_digitalocean-logo-mark.svg" alt="">
+            <div class="left">
+            <img src="https://prismic-io.s3.amazonaws.com/www-static%2F903fd83b-8963-42c2-baf6-44f4d6bb83f2_digitalocean-logo-mark.svg" alt="">
             <small>© 2020 DigitalOcean, LLC. All rights reserved.</small>
+          </div>
           </div>
           <div class="col-xs-12 col-md-6 col-lg-6">
             <ul class="flist">
