--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
 
-    <title></title>
+    <title>DigitalOcean</title>
               <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css" integrity="sha384-HzLeBuhoNPvSl5KYnjx0BT+WB0QEEqLprO+NBkkk5gbc67FTaL7XIGa2w1L0Xbgc" crossorigin="anonymous">
               <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
@@ -130,19 +130,29 @@
         <h2 class="thtitle" >Deploy and scale seamlessly</h2>
 
         <p class="thp">Our optimized configuration process saves your team time when running and scaling distributed applications, AI & machine learning workloads, hosted services, client websites, or CI/CD environments.</p>
-
+        <div class="col-xs-12 col-md-2 col-lg-2">
+               <div class="thlist">
+                 <button type="button" name="button"> <a href="#">Deploy</a></button>
+                 <button type="button" name="button"> <a href="#">Scale</a></button>
+                 <button type="button" name="button"> <a href="#">Store</a></button>
+                 <button type="button" name="button"> <a href="#">Secure</a></button>
+                 <button type="button" name="button"> <a href="#">Monitor</a></button>
+               </div>
+        </div>
 
 
          <div class="col-xs-12 col-md-5 col-lg-5">
            <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/16ae92b4-6939-446c-b6a3-0ffec01cdc14_kublogoicon.svg" alt="">
            <h5 class="thcol">Kubernetes in minutes</h5>
-           <p>Spin up a managed Kubernetes cluster in just a few clicks. Simply specify the size and location of your worker nodes.</p>
+           <p class="thp">Spin up a managed Kubernetes cluster in just a few clicks. Simply specify the size and location of your worker nodes.</p>
          </div>
          <div class="col-xs-12 col-md-5 col-lg-5">
            <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/9d343e9c-fe74-4979-8ad9-e8efc58d6ee7_dropletinboxicon.svg" alt="">
            <h5 class="thcol">Flexible compute types</h5>
           <p class="thp">With Basic, General Purpose, CPU-Optimized or Memory-Optimized Droplets, you can choose the right infrastructure for your workload.</p>
          </div>
+         <div class="col-xs-12 col-md-2 col-lg-2"> </div>
+
          <div class="col-xs-12 col-md-5 col-lg-5">
            <img class="block-img"src="https://prismic-io.s3.amazonaws.com/www-static/936bb585-99ba-460d-ae2f-7bbdae8896cc_stacksplusicon.svg" alt="">
            <h5 class="thcol">1-Click App Marketplace</h5>
@@ -153,11 +163,8 @@
            <h5 class="thcol">Global availability</h5>
            <p class="thp">Deploy to any of our data center locations – New York, SF, London, Amsterdam, Bangalore, and more.</p>
          </div>
-         <div class="col-xs-12 col-md-5 col-lg-5">
-           <img class="block-img"src="" alt="">
-           <h5 class="thcol"></h5>
-           <p class="thp"></p>
-         </div>
+
+
       </div>
     </div>
       </div>
